# openemr-private

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.github/workflows/: inferno-test.yml
agent/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
agent/app/: agent.py  config.py  main.py  memory.py  metrics.py  models.py  verification.py
agent/app/tools/: __init__.py  _openemr_client.py  allergy_drug_cross.py  drug_interactions.py  patient_allergies.py  patient_appointments.py  patient_lookup.py  patient_medications.py  patient_problems.py  patient_vitals.py
agent/docs/: architecture.md  assignment.md  cost-analysis.md  tech-tradeoffs.md
agent/evals/: cases.json  conftest.py  test_agent_evals.py  test_golden_sets.py
agent/evals/golden_sets/: drug_interactions.yaml  patient_medications.yaml
agent/static/: index.html
agent/tests/: conftest.py  test_tool_contracts.py  test_tools.py
agent/tests/eval/: cases.json
agent/tests/golden_sets/: allergy_drug_cross.yaml  patient_allergies.yaml  patient_appointments.yaml  patient_lookup.yaml  patient_problems.yaml  patient_vitals.yaml
ccdaservice/: package-lock.json
docker/production/: .env.example  deploy-1-provision.sh  deploy-2-setup.sh  deploy-3-verify.sh  deploy-4-ssl.sh  deploy-5-seed.sh  docker-compose.yml  nginx.conf
interface/modules/custom_modules/oe-module-agent-chat/: info.txt  moduleConfig.php  openemr.bootstrap.php
interface/modules/custom_modules/oe-module-agent-chat/src/: Bootstrap.php
interface/modules/custom_modules/oe-module-agent-chat/templates/: chat_widget.html.twig
